feat: add the content

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,10 @@
 $horizontal-padding: 250px;
+$horizontal-padding-mobile: 100px;
+$horizontal-padding-sm: 150px;
+$horizontal-padding-md: 250px;
+$dark: #242536;
+$dark-grey: #929292;
+$grey: #e4e4e4;
+$black: #4c4d4e;
+$light-grey: #282b57;
+$red: #d73b3b;
