--- a/src/pages/Menu/Menu.module.scss
+++ b/src/pages/Menu/Menu.module.scss
@@ -1,7 +1,17 @@
 @import 'styles/variables';
+@import 'styles/breakpoints';
 
-.menu {
+.nav {
   padding: 20px $horizontal-padding;
+  @media (max-width: $desktop_xsm) {
+    padding: 20px $horizontal-padding-mobile;
+  }
+  @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
+    padding: 20px $horizontal-padding-sm;
+  }
+  @media (min-width: $desktop_sm) and (max-width: $desktop_md){
+    padding: 20px $horizontal-padding-md;
+  }
 }
 
 .header {
@@ -12,11 +22,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 $horizontal-padding;
+  padding: 0 $horizontal-padding-md;
   &__text{
     color: white;
     font-size: 5rem;
     min-width: 400px;
     width: 40%;
+  }
+}
+
+.content {
+  padding: 50px $horizontal-padding;
+  @media (max-width: $desktop_xsm) {
+    padding: 50px $horizontal-padding-mobile;
+  }
+  @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
+    padding: 50px $horizontal-padding-sm;
+  }
+  @media (min-width: $desktop_sm) and (max-width: $desktop_md){
+    padding: 50px $horizontal-padding-md;
+  }
+  &__title {
+    color: $dark;
+    font-size: 3rem;
+    margin-bottom: 30px;
   }
 }
