--- a/src/pages/Menu/List/Item/Item.module.scss
+++ b/src/pages/Menu/List/Item/Item.module.scss
@@ -1,10 +1,10 @@
 @import "styles/variables";
 @import "styles/breakpoints";
 
-$massas: #d73b3b;
-$carnes: #30201e;
-$combos: #e6c864;
-$veganos: #80aa40;
+$pasta: #d73b3b;
+$meat: #30201e;
+$combo: #e6c864;
+$vegan: #80aa40;
 
 .item {
   display: flex;
@@ -71,19 +71,19 @@ $veganos: #80aa40;
     height: 40px;
     justify-content: center;
     padding: 10px 30px;
-    &__massas {
-      background-color: $massas;
+    &__pasta {
+      background-color: $pasta;
       color: white;
     }
-    &__carnes {
-      background-color: $carnes;
+    &__meat {
+      background-color: $meat;
       color: white;
     }
-    &__combos {
-      background-color: $combos;
+    &__combo {
+      background-color: $combo;
     }
-    &__veganos {
-      background-color: $veganos;
+    &__vegan {
+      background-color: $vegan;
     }
   }
   &__size,
